Deactivate responsivity on invocations table (prevents rows from expanding out of control -- overflow works)

--- a/client/src/style/scss/dataset.scss
+++ b/client/src/style/scss/dataset.scss
@@ -190,8 +190,6 @@
 }
 
 // ---------------------------------------------------------------------------- datasets as list-items
-.peekContainer { overflow: scroll }
-
 .dataset {
     @extend .has-job-state-mixin;
 
